...

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!-- COLUMN 2  -->
            <androidx.cardview.widget.CardView
                android:id="@+id/objectDetection_card"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="16dp"
...
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <!-- COLUMN 2  -->
            <androidx.cardview.widget.CardView
                android:id="@+id/obstacle_card"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="16dp"
...
