<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Help"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        >

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">



        </RelativeLayout>

        <GridLayout
            android:id="@+id/mainGrid"
            android:rowCount="3"
            android:columnCount="1"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_weight="7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="14dp">

            <!-- ROW 1  -->
            <!-- COLUMN 1  -->

            <!-- COLUMN 2  -->

            <androidx.cardview.widget.CardView
                android:id="@+id/objectDetection"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_rowWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/green_100"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:background="@drawable/obj_green_gradient"
                    >

                </LinearLayout>

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Object Detection"
                        android:textColor="#fff"
                        android:textSize="27sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="7dp"/>


                    <ImageView
                        android:id="@+id/obj_dict_media_play"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/play_button"
                        android:layout_marginRight="20dp"

                        >

                    </ImageView>


                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <!-- ROW 2  -->
            <!-- COLUMN 1  -->

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_rowWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/orange_200"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:background="@drawable/dist_yellow_gradient"
                    >

                </LinearLayout>
                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Book Reading and Money Notes"
                        android:textColor="#fff"
                        android:textSize="27sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="15dp"
                        />
                    <ImageView
                        android:id="@+id/dist_measure_media_play"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/play_button"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"

                        >

                    </ImageView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- COLUMN 2  -->

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_rowWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/red_100"
                android:id="@+id/notObsCard"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:background="@drawable/notify_red_grad"
                    >

                </LinearLayout>


                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Notify Obstacle"
                        android:textColor="#fff"
                        android:textSize="27sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="7dp"
                        />
                    <ImageView
                        android:id="@+id/notify_obs_media_play"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/play_button"
                        android:layout_marginRight="20dp"

                        >

                    </ImageView>

                </LinearLayout>



            </androidx.cardview.widget.CardView>


<!--            col 4-->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_rowWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/red_100"
                android:id="@+id/contact"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:background="@drawable/contact_grad"
                    >

                </LinearLayout>


                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Emergency contact"
                        android:textColor="#fff"
                        android:textSize="27sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="0dp"
                        />

                </LinearLayout>



            </androidx.cardview.widget.CardView>


            <!-- ROW 3  -->
            <!-- COLUMN 1  -->


            <!-- COLUMN 2  -->

        </GridLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:background="@color/purple_500"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/purple_500"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>